Do not assert that the two threads do not simultanously notify each other, because sometimes they do.  Should fix PR kern/46464.  OK pooka.